2009-05-16  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, libmisc/console.c (console): Remove the leading /dev/ from
	the tty before comparing with the lines specified by CONSOLE.
	* src/su.c: Do not remove the /dev/ prefix since it is done by
	console().

2009-05-16  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.d/CONSOLE.xml: Document the format of the CONSOLE
	file.

2009-05-16  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/login.c: Fix failure of non PAM enabled versions when
	an empty username is entered after a first prompt.

2009-05-16  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Added missing end of line at the end of success
	messages.

2009-05-16  sacha  <sachall@infonie.fr>

	* po/fr.po: Fixed typo in the vipw usage string.

2009-05-12  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/shell.c: Removed invalid code that executed the user's
	shell as a shell script when the direct execution of the user's
	shell failed with ENOEXEC and the user's shell has a shebang. The
	interpreter might not be the right one.  Executing the user's
	shell with sh -c might be better, but I'm not sure we should try
	harder when there is a failure. Note: the removed code was only
	included #ifndef __linux__.

2009-05-12  Nicolas François  <nicolas.francois@centraliens.net>

	* man/userdel.8.xml: The USERGROUPS_ENAB group may not be removed
	when the group is used by other users, not the user.

2009-05-12  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c, man/login.defs.d/USERDEL_CMD.xml: Move the
	USERDEL_CMD script example from the source code to the
	documentation.

2009-05-11  Nicolas François  <nicolas.francois@centraliens.net>

	* man/newusers.8.xml: PAM enabled version: describe how passwords
	are updated and how newusers behave in case of error.

2009-05-10  Nicolas François  <nicolas.francois@centraliens.net>
